--- a/relayer-config-iotex-payload.yaml
+++ b/relayer-config-iotex-payload.yaml
@@ -21,6 +21,9 @@ validators:
       0xD2dc891b5C3d676AaBa3319FE38711CcfD79fa94:
         # CIOTX -> IOTX
         0x9f90b457dea25ef802e38d470dda7343691d8fe1: "0x0000000000000000000000000000000000000000"
+      0x1029f89f03582db752d02D72e32e108939529305:
+        # WIOTX -> IOTX
+        0xA00744882684C3e4747faEFD68D283eA44099D03: "0x0000000000000000000000000000000000000000"
 database:
   uri: "root:kdfjjrU64fjK58H@tcp(database:3306)/relayer?parseTime=true"
   driver: "mysql"
