--- a/witness-config-ethereum-payload.yaml
+++ b/witness-config-ethereum-payload.yaml
@@ -91,3 +91,6 @@ cashiers:
       # W-IOTX
       - token2: "io15qr5fzpxsnp7garl4m7k355rafzqn8grrm0grz"
         token1: "0x6fB3e0A217407EFFf7Ca062D46c26E5d60a14d69"
+      # Network3
+      - token2: "0x4d736d611a309ce036c9f62efeb1af2baf14bb2a"
+        token1: "0x33c9343db7ac99d61880dd6b32a3845885a81b5c"
