--- a/relayer-config-bsc-payload.yaml
+++ b/relayer-config-bsc-payload.yaml
@@ -11,7 +11,7 @@ validators:
   - withPayload: true
     address: "0x95C6F6Af2c0Fa069768203FDa963d7626efC794a"
     cashiers:
-      - "0xa016f866a606221E9C9E6ab3a942Bfc81F6074f4"
+      - address: "0xa016f866a606221E9C9E6ab3a942Bfc81F6074f4"
 unwrappers:
   0xC365d086642efB5599b2D9639b7029AbFcD5b6Bf:
     # FOR
