--- a/witness-config-bsc-payload.yaml
+++ b/witness-config-bsc-payload.yaml
@@ -43,3 +43,6 @@ cashiers:
       # DRF
       - token2: "io1mm5eya89mz3dmp0lqtlfuydf67nrdhnwg92dy4"
         token1: "0x02dF5253Bc4EfC9F8f744133Ff99981b18Df0473"
+      # XPIN
+      - token1: "0x486501a021514ac9a3e5023b5ea4a69a93b725ca"
+        token2: "io10gn4cf76dchldp6zkhgh6y0d4dq8lye8d53kjj"
