--- a/relayer-config-bsc-payload.yaml
+++ b/relayer-config-bsc-payload.yaml
@@ -22,6 +22,8 @@ unwrappers:
     0x8Dfb1099C53f634BEcf3C98aE19eB1BAA1b37D43: "0x56083560594E314b5cDd1680eC6a493bb851BBd8"
     # DRF
     0x02dF5253Bc4EfC9F8f744133Ff99981b18Df0473: "0x9400Aa8eb5126d20CDE45C7822836BFB70F19878"
+    # XPIN
+    0x486501A021514ac9A3E5023B5eA4A69a93b725ca: "0xD955c9bA56Fb1AB30e34766e252A97ccCE3D31A6"
 database:
   uri: "root:kdfjjrU64fjK58H@tcp(database:3306)/relayer?parseTime=true"
   driver: "mysql"
