--- a/witness-config-iotex-payload.yaml
+++ b/witness-config-iotex-payload.yaml
@@ -137,6 +137,9 @@ cashiers:
       # XPIN
       - token1: "io10gn4cf76dchldp6zkhgh6y0d4dq8lye8d53kjj"
         token2: "0x486501a021514ac9a3e5023b5ea4a69a93b725ca"
+      # NB
+      - token1: "io130c604xy86n3l0c5s5yx4a4lzklslh6ptq0m94"
+        token2: "0xD0781be7335ec2C820bD3F9687dDe809892d985e"
   - id: "iotex-to-matic-payload"
     withPayload: true
     relayerURL: ":7204"
